# llm-groupby-commentary

./: README.md  pyproject.toml
src/llm_groupby_commentary/: __init__.py  happy.py  main.py
src/llm_groupby_commentary/data/world_happiness/: README.md
