[project]
name = "llm-groupby-commentary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alexcolemandata", email = "coleman.g.alex@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "ollama>=0.4.4",
    "pandera[polars]>=0.21.1",
    "polars-lts-cpu>=1.17.1",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
llm-groupby-commentary = "llm_groupby_commentary:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "datasette>=0.65.1",
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "pdbpp>=0.10.3",
]
